# nss-registry-svn

branches/release0_1/nss-registry/: THANKS  configure
branches/release0_1/nss-registry/autom4te.cache/: traces.0
branches/release0_1/nss-registry/src/: .cvsignore  Makefile.am  group.h  lib.h  shadow.c
branches/release0_2/nss-registry/: .cvsignore  README  THANKS  configure  configure.in
branches/release0_2/nss-registry/autom4te.cache/: output.0
branches/release0_2/nss-registry/src/: lib.c
branches/release0_2/nss-registry/tools/: .cvsignore  Makefile.in  passwdconvert.c
branches/release_0-3/nss-registry/: Makefile.in  configure  configure.in
branches/release_0-3/nss-registry/autom4te.cache/: output.0  traces.0
branches/release_0-3/nss-registry/src/: Makefile.am  Makefile.in  group.c  lib.c  nss-registry.h  passwd.c  shadow.c
branches/release_0-3/nss-registry/tools/: addtestuser.sh
branches/skumler/nss-registry/: Makefile.in  configure.in
branches/skumler/nss-registry/src/: config.h.in  group.c
branches/skumler/nss-registry/tools/: Makefile.am
tags/start/nss-registry/autom4te.cache/: output.0
tags/start/nss-registry/src/: Makefile.in  passwd.c
trunk/nss-registry/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  nss-registry.spec
trunk/nss-registry/autom4te.cache/: output.0  requests  traces.0
trunk/nss-registry/src/: Makefile.am  Makefile.in  group.c  group.h  lib.c  lib.h  nss-registry.h  nss-shadow.h  passwd.c  passwd.h  shadow.c
trunk/nss-registry/tools/: .cvsignore  Makefile.am  Makefile.in  addtestuser.sh  passwdconvert.c
